# investment-analysis-platform

./: Makefile  README.md  main.py  pyproject.toml  streamlit_app.py
src/basic_generator/: investment_report_generator.py  main.py  requirements.txt
src/tests/: test_models.py
src/upsonic_investment_generator/: __init__.py  __main__.py  cli.py  models.py  workflow.py
src/upsonic_investment_generator/api/: __init__.py  main.py
