[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "upsonic-investment-generator"
version = "0.1.0"
description = "Upsonic-powered investment analysis with FastAPI and Streamlit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "streamlit>=1.38",
    "upsonic",
    "yfinance>=0.2",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "ftfy>=6.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
upsonic-investment-generator = "upsonic_investment_generator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/upsonic_investment_generator"]

[tool.hatch.build.targets.sdist]
include = [
    "src/upsonic_investment_generator",
    "streamlit_app.py",
    "Makefile",
    "README.md",
]
